[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = "0.13.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros" ]}
time = "0.3.47"
tokio = {version = "1.51.1", features = ["full"] }
