[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
jsonwebtoken = "10.4.0"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
bcrypt = "0.19.2"
dotenvy = "0.15.7"
reqwest = "0.13.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
tokio = {version = "1.51.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"

